добавил docker compose

--- a/src/SmartWay.WebApi/appsettings.Development.json
+++ b/src/SmartWay.WebApi/appsettings.Development.json
@@ -4,5 +4,12 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost; Port=5434; User Id=postgres; Password=root; Database=SmartWayFiles;"
+  },
+  "Token": {
+    "Issuer": "http://localhost:5001",
+    "Secret": "secret1234567890-+"
   }
 }
