--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -11,7 +11,19 @@ services:
       - 5434:5432
     volumes:
       - pgdata:/var/lib/postgresql/data
-
+  
+  smartwey_webapi:
+    image: vitaliytyu/smartway_webapi:latest
+    build:
+      context: .
+      dockerfile: src/SmartWay.WebApi/Dockerfile
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Development
+      - ConnectionStrings__DefaultConnection=Server=postgres; Port=5432; User Id=postgres; Password=root; Database=SmartWayFiles;
+    ports:
+      - 5001:80
+    depends_on:
+      - postgres
 
 volumes:
   pgdata:
